# autotail

./: .gitignore  README.md  main.py  pyproject.toml
autotail/: deployment.py  main.py  postbot.py  workersunitedlies.py
autotail/constants/: locators.py  template.json
