[tool.poetry]
name = "autotail"
version = "0.0.1"
description = "tell many of happy tales about swu"
authors = ["delphidel"]
license = "unlicense"
packages = [
    { include = "autotail" }
]
include = ['autotail/constants/template.json']
readme = "README.md"
homepage = "https://github.com/delphidel/autotail"
repository = "https://github.com/delphidel/autotail"
keywords = ['solidarity', 'forever']

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28"
Faker = "^10.0.0"
openai = "^0.27"

[tool.poetry.scripts]
autotail = 'autotail.main:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"